--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@floating-ui/react": "^0.15.1",
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.2",
+    "framer-motion": "^8.1.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
