--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.2",
+    "classnames": "^2.3.2",
     "framer-motion": "^8.1.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.3",
     "react-router-dom": "^6.6.1",
+    "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
