--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.15.1",
     "@hookform/resolvers": "^2.9.10",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.2",
