--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.41.3",
     "react-router-dom": "^6.6.1",
     "react-toastify": "^9.1.1",
+    "swiper": "^8.4.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
