--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "framer-motion": "^8.1.7",
+    "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
