--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "framer-motion": "^8.1.7",
+    "i18next": "^22.4.9",
     "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.3",
+    "react-i18next": "^12.1.5",
     "react-router-dom": "^6.6.1",
     "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
