--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.41.3",
     "react-i18next": "^12.1.5",
     "react-router-dom": "^6.6.1",
